public_html/css/list-sidebar.css
#sidebar {
	width: 12.5em;
	float: left;
	margin-right: 1em;
}

#sidebar ul {
	list-style-type: none;
	margin: 1.5em 0 1em 0;
	padding: 0;
}

	#save-info {
		font-size: 85%;
		margin: 0;
	}

#sidebar-nav {
	position: relative;
}
	#sidebar-nav:before {
		position: absolute;
		right: 0;
		top: -20px;
		bottom: -20px;
		width: 6px;
		content: ' ';
		display: block;
		border-right: 1px solid lightgray;
		background-image: linear-gradient(to left,
			rgba(0,0,0,0.05) 0%,
			rgba(0,0,0,0) 100%);
	}
	#sidebar-nav:after {
		display: block;
		content: ' ';
		position: absolute;
		right: -10px;
		top: -20px;
		bottom: -20px;
		width: 6px;
		/* cover gradient from ul:before */
		background-image: linear-gradient(to bottom,
			white 0%,
			rgba(255,255,255,0) 10%,
			rgba(255,255,255,0) 90%,
			white 100%);
		/* cover box-shadow from li.active */
		border-right: 10px solid white;
		z-index: 3;
		pointer-events: none;
	}

#sidebar-nav hr {
	height: 6px;
	z-index: -1;
	border: none;
	background: linear-gradient(to right,
		rgba(255,255,255,0) 0%,
		rgba(0,0,0,0.05) 50%);
	position: relative;
}
	#sidebar-nav hr:after {
		display: block;
		content: ' ';
		width: 100%;
		height: 6px;
		position: absolute;
		top: 0;
		background-image: linear-gradient(to top,
			rgba(255,255,255,0) 0%,
			rgba(255,255,255,1) 100%);
	}

#sidebar li a:not(.dragger) {
	display: block;
	margin: 0;
	padding: 0 0.5em 0 1em;
	line-height: 35px;
	color: gray;
}
	#sidebar li:not(.active) a:not(.dragger):hover {
		border-right: 4px solid lightgray;
	}

	#sidebar li a:hover,
	#sidebar li.active a {
		color: black;
	}


#lists a.list {
	overflow: hidden;
	white-space: pre;
	text-overflow: ellipsis;
	/* outline consistency with li.active a */
	box-shadow: -1px 1px 3px transparent;
}
	#lists li.active a.list {
		box-shadow: -1px 1px 3px rgba(0,0,0,0.05);
		position: relative;
		z-index: 2;
		margin: -1px 0 -1px -1px;
		border-top-left-radius: 3px;
		border-bottom-left-radius: 3px;
		border-top: 1px solid lightgray;
		border-bottom: 1px solid lightgray;
		border-left: 1px solid lightgray;
		background-color: white;
		background-image: linear-gradient(to right,
			hsl(215,80%,80%) 0,
			hsl(215,80%,80%) 4px,
			rgba(255,255,255,0) 4px);
	}

#sidebar #lists {
	margin-left: -20px;
}
	#sidebar #lists a.list {
		margin-left: 20px;
	}
	#lists a.dragger {
		vertical-align: middle;
		line-height: 35px;
		margin-left: 0;
		width: 20px;
		position: absolute;
		visibility: hidden; /* disallow focus */
	}
	body #lists .dragging a.dragger,
	#lists li:hover a.dragger {
		visibility: visible;
	}

#list-management:after {
	clear: both;
	display: block;
	content: ' ';
}

